force-app/main/default/objects/hud_Location__c.object
<CustomObject>
    <label>hud_Location</label>
    <nameField>
        <displayFormat>HLO-{00000000}</displayFormat>
        <label>Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>hud_Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BLDG_LOC_IDENTIFIER__c</fullName>
        <label>BLDG_LOC_IDENTIFIER</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLDG_LOC__c</fullName>
        <label>BLDG_LOC</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_DIR_LISTING_KEY__c</fullName>
        <label>CONTACT_DIR_LISTING_KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTACT_LOCATION_KEY__c</fullName>
        <externalId>true</externalId>
        <label>CONTACT_LOCATION_KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFFDT__c</fullName>
        <label>EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFF_STATUS__c</fullName>
        <label>EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNAL_ID__c</fullName>
        <externalId>true</externalId>
        <label>INTERNAL_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LISTING_CATEGORY__c</fullName>
        <label>LISTING_CATEGORY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LISTING_ID__c</fullName>
        <label>LISTING_ID</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOC_TYPE_CD__c</fullName>
        <label>LOC_TYPE_CD</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>hud_Locations</relationshipLabel>
        <relationshipName>hud_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MULE_UNIQUE_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MULE_UNIQUE_PERSON_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIVACY_VALUE__c</fullName>
        <label>PRIVACY_VALUE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIV_ID__c</fullName>
        <externalId>true</externalId>
        <label>UNIV_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_DT__c</fullName>
        <label>UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>UNIV_ID__c</columns>
        <columns>Location_Contact__c</columns>
        <columns>LOC_TYPE_CD__c</columns>
        <columns>BLDG_LOC__c</columns>
        <columns>BLDG_LOC_IDENTIFIER__c</columns>
        <columns>LISTING_CATEGORY__c</columns>
        <columns>CONTACT_LOCATION_KEY__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>